syntax = "proto3";

package login;

import "common.proto";

option java_multiple_files = true;
option java_package = "com.chatapp.login";

service LoginService {

  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Logout(common.GetRequest) returns (common.ServiceResponse);
  rpc CreateAccount(LoginRequest) returns (common.ServiceResponse);
}

message LoginRequest {

  string username = 1;
  string password = 2;
}

message LoginResponse {

  common.LoginToken token = 1;
  common.ResponseCode response_code = 2;
}
